feat: fix bugs and implement features.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       ],
       "@utils/*": [
         "utils/*"
+      ],
+      "@scripts/*": [
+        "scripts/*"
       ]
     },
     "jsxImportSource": "react"
