--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "astro": "^4.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-emoji": "^4.0.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
