--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@giscus/react": "^3.0.0",
     "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
